# top-down-nixtla

./: .gitignore  README.md  pyproject.toml
top_down_nixtla/: app.py  evaluation.py  multivariate.py  rollingmodelevaluator.py  univariate-st.py  univariate.py  univariate_st.py
top_down_nixtla/datasets/: China_volume.csv  dummy.csv
