[tool.poetry]
name = "top-down-nixtla"
version = "0.1.0"
description = ""
authors = ["Akash <akash.iitr17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.0"
ipykernel = "^6.29.4"
jupyter = "^1.0.0"
pandas = "^2.2.2"
statsmodels = "^0.14.2"
statsforecast = "^1.7.5"
logging = "^0.4.9.6"
streamlit = "^1.35.0"
watchdog = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
